--- a/style.css
+++ b/style.css
@@ -1,22 +1,20 @@
 :root {
-    --primary-gradient :linear-gradient(135deg, #91AAFF,#BAE536);
+  --primary-gradient: linear-gradient(135deg, #91aaff, #bae536);
 }
 
-
-
-*{
-    box-sizing:border-box;
-    font-family:'Poppins', sans-serif;
+* {
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
-body, html {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    font-family: Arial, sans-serif;
-    background:#d9d9d9;
+body,
+html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  font-family: Arial, sans-serif;
+  background: #d9d9d9;
 }
-  
 
 /*========================GRID SETUP==============================*/
 .grid-container {
@@ -24,208 +22,231 @@ body, html {
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: repeat(12, 1fr);
   height: 100vh;
-  grid-gap:10px;
-  border:1px solid black;
+  grid-gap: 10px;
+  border: 1px solid black;
 }
 
-.card{
+.card {
   grid-row: 2/12;
   grid-column: 2/5;
-  border:1px solid black;
-  display:grid;
-  grid-template-rows: repeat(10,1fr);
-  grid-template-columns:repeat(3,1fr);
+  border: 1px solid black;
+  display: grid;
+  grid-template-rows: repeat(10, 1fr);
+  grid-template-columns: repeat(3, 1fr);
 }
 
-.search{
-    grid-row:1;
-    grid-column:1/4;
+.search {
+  grid-row: 1;
+  grid-column: 1/4;
 }
 
-.weather{
-    grid-row:2;
-    grid-column:2;
+.weather {
+  grid-row: 2;
+  grid-column: 2;
 }
 
-.day-container{
-    border:1px solid black;
-    grid-row:2/4;
-    grid-column:5/12;
-    display:grid;
-    grid-gap:10px;
-    grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+.day-container {
+  border: 1px solid black;
+  grid-row: 2/4;
+  grid-column: 5/12;
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(2, 1fr);
 }
 
-.mon, .tues, .wed, .thur, .fri, .sat, .sun{
-    border:1px solid black;
-    grid-row:1/5;
-    
+.mon,
+.tues,
+.wed,
+.thur,
+.fri,
+.sat,
+.sun {
+  border: 1px solid black;
+  grid-row: 1/5;
 }
 
-.hour-container{
-    border:1px solid black;
-    grid-row:4/6;
-    grid-column:5/12;
-    display:grid;
-    grid-gap:10px;
-    grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+.hour-container {
+  border: 1px solid black;
+  grid-row: 4/6;
+  grid-column: 5/12;
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(2, 1fr);
 }
 
-.hr-1, .hr-2, .hr-3, .hr-4, .hr-5, .hr-6, .hr-7{
-    border:1px solid black;
-    grid-row:1/5;
+.hr-1,
+.hr-2,
+.hr-3,
+.hr-4,
+.hr-5,
+.hr-6,
+.hr-7 {
+  border: 1px solid black;
+  grid-row: 1/5;
 }
 
-.analytics-container-1{
-    border:1px solid black;
-    grid-row:7/10;
-    grid-column: 5/12;
-    display:grid;
-    grid-gap:10px;
-    grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+.analytics-container-1 {
+  border: 1px solid black;
+  grid-row: 7/10;
+  grid-column: 5/12;
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(2, 1fr);
 }
 
-.analytics-box01, .analytics-box02, .analytics-box03{
-    border:1px solid black;
-    grid-row:1/5
+.analytics-box01,
+.analytics-box02,
+.analytics-box03 {
+  border: 1px solid black;
+  grid-row: 1/5;
 }
 
-.analytics-box01{
-    grid-column:1/3;
-    text-align:center;
-    display:flex;
-    justify-content: center;
-    
+.analytics-box01 {
+  grid-column: 1/3;
+  text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
-.analytics-box02{
-    grid-column:3/5;
-    text-align:center;
-    display:flex;
-    justify-content: center;
+.analytics-box02 {
+  grid-column: 3/5;
+  text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
-.analytics-box03{
-    grid-column:5/8;
+.analytics-box03 {
+  grid-column: 5/8;
 }
 
-
-.analytics-container-2{
-    border:1px solid black;
-    grid-row:10/12;
-    grid-column: 5/12;
-    display:grid;
-    grid-gap:10px;
-    grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+.analytics-container-2 {
+  border: 1px solid black;
+  grid-row: 10/12;
+  grid-column: 5/12;
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(2, 1fr);
 }
 
-.analytics-box1, .analytics-box2, .analytics-box3{
-    border:1px solid black;
-    grid-row:1/3;
+.analytics-box1,
+.analytics-box2,
+.analytics-box3 {
+  border: 1px solid black;
+  grid-row: 1/3;
 }
 
-.analytics-box1{
-    grid-column:1/3;
-    
+.analytics-box1 {
+  grid-column: 1/3;
 }
 
-.analytics-box2{
-    grid-column:3/5;
+.analytics-box2 {
+  grid-column: 3/5;
 }
 
 .analytics-box3 {
-    grid-column:5/8;
+  grid-column: 5/8;
 }
-
 
 /*============================STYLING==============================*/
-.card{
-    border-radius:20px;
-    padding:10px 15px;
-    text-align: center;
-    background:var(--primary-gradient);
+.card {
+  border-radius: 20px;
+  padding: 10px 15px;
+  text-align: center;
+  background: var(--primary-gradient);
 }
 
-.info-img{
-    height:30px;
+.info-img {
+  height: 30px;
 }
 
-.current-card-img{
-    height:100px;
+.current-card-img {
+  height: 100px;
 }
 
-.search{
-    display:flex;
-    align-items:center;
-    justify-content:space-between;
-    height:30px;
+.search {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 30px;
 }
 
-.search input{
-    border:0;
-    outline:0;
-    background:#EBFFFC;
-    color:#555;
-    padding:10px 25px;
-    height:30px;
-    width:75px;
-    border-radius:30px;
-    flex:1;
-    margin-right:16px;
-    font-size:18px;
+.search input {
+  border: 0;
+  outline: 0;
+  background: #ebfffc;
+  color: #555;
+  padding: 10px 25px;
+  height: 30px;
+  width: 75px;
+  border-radius: 30px;
+  flex: 1;
+  margin-right: 16px;
+  font-size: 18px;
 }
 
-.search button{
-    border:0;
-    outline:0;
-    background:#EBFFFC;
-    border-radius:50%;
-    width:30px;
-    height:30px;
-    cursor:pointer;
-    padding:7px;
+.search button {
+  border: 0;
+  outline: 0;
+  background: #ebfffc;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  padding: 7px;
 }
 
-.search button img{
-    width: 15px;
-    
+.search button img {
+  width: 15px;
 }
 
-.weather h1{
-    font-weight:500 ;
+.weather h1 {
+  font-weight: 500;
 }
 
-.weather h2{
-    font-weight:400 ;
+.weather h2 {
+  font-weight: 400;
 }
 
-.info-heading{
-    font-weight:400;
+.info-heading {
+  font-weight: 400;
 }
 
-.analytics-box01, .analytics-box02, .analytics-box03, .analytics-box1, .analytics-box2, .analytics-box3{
-    background:var(--primary-gradient);
-    border-radius:10px;
+.analytics-box01,
+.analytics-box02,
+.analytics-box03,
+.analytics-box1,
+.analytics-box2,
+.analytics-box3 {
+  background: var(--primary-gradient);
+  border-radius: 10px;
 }
 
-.weather, .humidity-info, .wind-info{
-    display:none;
+.weather,
+.humidity-info,
+.wind-info {
+  display: none;
 }
 
-.error{
-    grid-row:2;
-    grid-column:1/3;
-    margin-top:-15px;
-    font-size:14px;
-    display:none;
+.error {
+  grid-row: 2;
+  grid-column: 1/3;
+  margin-top: -15px;
+  font-size: 14px;
+  display: none;
 }
 
-.analytics-box1{
-    display:flex;
-    justify-content: center;
-    text-align: center;
+.analytics-box1,
+.analytics-box2 {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+.hi-lo {
+  display: flex;
+  gap: 4px;
 }
